--- a/Resources/Private/Language/Tca.xlf
+++ b/Resources/Private/Language/Tca.xlf
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2017-11-27T17:38:32Z" product-name="ma_phpinclude">
+    <file source-language="en" datatype="plaintext" original="messages" date="2020-02-02T02:02:02Z" product-name="ma_phpinclude">
         <header/>
         <body>
-            <trans-unit id="ma_phpinclude_content_model.wizard.title">
+            <trans-unit id="extension.title">
+                <source>MaPHPInclude</source>
+            </trans-unit>
+            <trans-unit id="extension.description">
+                <source>Import PHP-Scripts out of the Typo3 filesystem.</source>
+            </trans-unit>
+            <trans-unit id="wizard.title">
                 <source>Title</source>
             </trans-unit>
-            <trans-unit id="ma_phpinclude_content_model.wizard.description">
+            <trans-unit id="wizard.description">
                 <source>Description</source>
             </trans-unit>
         </body>
