--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -1,25 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2017-11-27T17:38:32Z" product-name="ma_phpinclude">
+    <file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2020-02-02T02:02:02Z" product-name="ma_phpinclude">
         <header/>
         <body>
             <trans-unit id="extension.title">
                 <source>MaPHPInclude</source>
+                <target>MaPHPInclude</target>
             </trans-unit>
             <trans-unit id="ma_phpinclude_content_model">
-                <source>PHPDatei</source>
+                <source>PHPFile</source>
+                <target>PHPDatei</target>
             </trans-unit>
             <trans-unit id="ma_phpinclude_content_model.item_label">
-                <source>Name</source>
+                <source>Label</source>
+                <target>Name</target>
             </trans-unit>
             <trans-unit id="ma_phpinclude_content_model.item_description">
-                <source>Beschreibung</source>
+                <source>Description</source>
+                <target>Beschreibung</target>
             </trans-unit>
             <trans-unit id="ma_phpinclude_content_model.item_source_path">
-                <source>Datei Pfad</source>
+                <source>File Source</source>
+                <target>Datei Pfad</target>
             </trans-unit>
-            <trans-unit id="ma_phpinclude_content_model.item_script_content">
-                <source>Datei SourceCode</source>
+            <trans-unit id="ma_phpinclude_content_model.override_mode">
+                <source>Override-Mode</source>
+                <target>Überschreibung-Modus</target>
+            </trans-unit>
+            <trans-unit id="ma_phpinclude_content_model.use_override">
+                <source>Override-Mode?</source>
+                <target>Überschreibung-Modus?</target>
+            </trans-unit>
+            <trans-unit id="ma_phpinclude_content_model.source_description">
+                <source>All Files are uploaded to the path "/uploads/tx_maphpinclude/".</source>
+                <target>Alle Datein werden auf dem Pfad "/uploads/tx_maphpinclude/" hochgeladen.</target>
+            </trans-unit>
+            <trans-unit id="ma_phpinclude_content_model.override_description">
+                <source>Using the "Override Mode" allows to manually set the Filename instead of uploading it. It will be searched under the "/uploads/tx_maphpinclude/" folder.</source>
+                <target>Der "Überschreibung-Modus" erlaubt es eine händische Datei aus dem Uploadorder anzugeben ohne diese hochladen zu müssen. Die Datei wird unter dem Ordner "/uploads/tx_maphpinclude/" gesucht.</target>
+            </trans-unit>
+            <trans-unit id="ma_phpinclude_content_model.override_url">
+                <source>Override Filename</source>
+                <target>Dateiname überschreiben</target>
             </trans-unit>
         </body>
     </file>
