--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2017-11-27T17:38:32Z" product-name="ma_phpinclude">
+    <file source-language="en" datatype="plaintext" original="messages" date="2020-02-02T02:02:02Z" product-name="ma_phpinclude">
         <header/>
         <body>
             <trans-unit id="extension.title">
@@ -18,8 +18,20 @@
             <trans-unit id="ma_phpinclude_content_model.item_source_path">
                 <source>File Source</source>
             </trans-unit>
-            <trans-unit id="ma_phpinclude_content_model.item_script_content">
-                <source>File SourceCode</source>
+            <trans-unit id="ma_phpinclude_content_model.override_mode">
+                <source>Override-Mode</source>
+            </trans-unit>
+            <trans-unit id="ma_phpinclude_content_model.use_override">
+                <source>Override-Mode?</source>
+            </trans-unit>
+            <trans-unit id="ma_phpinclude_content_model.source_description">
+                <source>All Files are uploaded to the path "/uploads/tx_maphpinclude/".</source>
+            </trans-unit>
+            <trans-unit id="ma_phpinclude_content_model.override_description">
+                <source>Using the "Override Mode" allows to manually set the Filename instead of uploading it. It will be searched under the "/uploads/tx_maphpinclude/" folder.</source>
+            </trans-unit>
+            <trans-unit id="ma_phpinclude_content_model.override_url">
+                <source>Override Filename</source>
             </trans-unit>
         </body>
     </file>
